# Soft-Robots-Novelty-Search

./: .gitignore  LICENSE  README.md
GaDirectEncoding/: CMakeLists.txt  GaDirectEncoding.cpp  readme.md
GaDirectEncoding/PetriDish/: .gitignore  PetriDish.cpp  PetriDish.h  README.md
GaDirectEncoding/galib247/: makefile  makevars
RanGenEncoding/: CMakeLists.txt  README.md  RanGenEncoding.cpp
RandomSoftBots/: CMakeLists.txt  README.md  RandomSoftBots.cpp
SimFiles/default/: default.vxa  readme
VoxCad/: VoxCad.pro
VoxCad/QTUtils/: QOpenGL.cpp
VoxCad/VoxCad/: Dlg_VideoCapture.cpp  QVX_Interface.cpp  QVX_Interfaces.h  QVX_TensileTest.cpp  VoxCad  VoxCad.cpp  VoxCad.h  main.cpp
VoxCad/Voxelyze/: VXS_BondInternal.h  VX_Enums.h  VX_Object.cpp  VX_Sim.cpp  VX_Sim.h
VoxCad/Voxelyze/Utils/: XML_Rip.h
VoxSim/: CMakeLists.txt  Main.cpp  help.txt  readme.md
VoxSim/VoxBotCreator/: VoxBotCreator.cpp  VoxBotCreator.h  readme.md  voxbotcreator_global.h
VoxSim/Voxelyze/: VXS_Bond.cpp  VXS_Bond.h  VXS_BondCollision.cpp  VXS_BondCollision.h  VXS_BondInternal.cpp  VXS_BondInternal.h  VXS_Voxel.cpp  VXS_Voxel.h  VX_Benchmark.cpp  VX_Benchmark.h  VX_Bond.cpp  VX_Bond.h  VX_Enums.h  VX_Environment.cpp  VX_Environment.h  VX_FEA.cpp  VX_FEA.h  VX_FRegion.cpp  VX_FRegion.h  VX_MeshUtil.cpp  VX_MeshUtil.h  VX_Object.cpp  VX_Object.h  VX_Sim.cpp  VX_Sim.h  VX_SimGA.cpp  VX_SimGA.h  VX_Voxel.cpp  VX_Voxel.h
VoxSim/Voxelyze/Utils/: Array3D.cpp  Array3D.h  GL_Utils.cpp  GL_Utils.h  MarchCube.cpp  MarchCube.h  Mesh.cpp  Mesh.h  Vec3D.h  XML_Rip.cpp  XML_Rip.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp  zconf.h  zlib.h
cppn-neat/: buildAll.sh  readme.md
cppn-neat/JGTL/: CMakeLists.txt
cppn-neat/NE/HyperNEAT/: CMakeLists.txt
cppn-neat/NE/HyperNEAT/Hypercube_NEAT/: CMakeLists.txt
cppn-neat/NE/HyperNEAT/Hypercube_NEAT/include/: HCUBE_Defines.h  HCUBE_EvaluationPanel.h  HCUBE_ExperimentRun.h  HCUBE_SubstratePanel.h
cppn-neat/NE/HyperNEAT/Hypercube_NEAT/include/Experiments/: HCUBE_Experiment.h  HCUBE_VoxbotsExperiment.h
cppn-neat/NE/HyperNEAT/Hypercube_NEAT/src/: HCUBE_Defines.cpp  HCUBE_EvaluationPanel.cpp  HCUBE_EvaluationSet.cpp  HCUBE_ExperimentPanel.cpp  HCUBE_ExperimentRun.cpp  HCUBE_MainFrame.cpp  HCUBE_NetworkPanel.cpp  HCUBE_NeuralNetworkPanel.cpp  HCUBE_NeuralNetworkWeightGrid.cpp  HCUBE_SubstratePanel.cpp  HCUBE_UserEvaluationFrame.cpp  main.cpp
cppn-neat/NE/HyperNEAT/Hypercube_NEAT/src/Experiments/: HCUBE_VoxbotsExperiment.cpp  HCUBE_XorExperiment.cpp
cppn-neat/NE/HyperNEAT/Hypercube_NEAT/src/utils/: Array3D.cpp  Array3D.h
cppn-neat/NE/HyperNEAT/NEAT/: CMakeLists.txt
cppn-neat/NE/HyperNEAT/NEAT/include/: NEAT_CoEvoGeneticGeneration.h  NEAT_Defines.h  NEAT_GeneticGeneration.h  NEAT_GeneticIndividual.h  NEAT_GeneticIndividualBehavior.h  NEAT_GeneticPopulation.h  NEAT_GeneticSpecies.h  NEAT_Globals.h
cppn-neat/NE/HyperNEAT/NEAT/src/: NEAT_CoEvoGeneticGeneration.cpp  NEAT_Defines.cpp  NEAT_FastBiasNetwork.cpp  NEAT_FastNetwork.cpp  NEAT_FractalNetwork.cpp  NEAT_GeneticGene.cpp  NEAT_GeneticGeneration.cpp  NEAT_GeneticIndividual.cpp  NEAT_GeneticIndividualBehavior.cpp  NEAT_GeneticNodeGene.cpp  NEAT_GeneticPopulation.cpp  NEAT_GeneticSpecies.cpp  NEAT_Globals.cpp  NEAT_LayeredSubstrate.cpp  NEAT_ModularNetwork.cpp  NEAT_NetworkLink.cpp  NEAT_NetworkNode.cpp  NEAT_Random.cpp  NEAT_VectorNetwork.cpp
